--- a/trunk/frontends/php/styles/link.css
+++ b/trunk/frontends/php/styles/link.css
@@ -42,7 +42,7 @@ a.on:active 	{	color:#AA0000;	}
 
 a.action:link		{	color:#3C3089;	}
 a.action:visited 	{	color:#3C3089;	}
-a.action:hover 		{	color:#3C3089;	}
+a.action:hover 		{	color:#6C80B9;	}
 a.action:active 	{	color:#3C3089;	}
 
 a.small_font:link	{	color: #000000;	text-decoration: none; }
