--- a/frontends/php/styles/link.css
+++ b/frontends/php/styles/link.css
@@ -71,3 +71,8 @@ a.styled:link		{	color:#000; font-size: 10px; text-decoration: none; }
 a.styled:visited 	{	color:#000; font-size: 10px; text-decoration: none; }
 a.styled:hover 		{	color:#000; font-size: 10px; }
 a.styled:active 	{	color:#000; font-size: 10px; }
+
+a.image:link		{	text-decoration: none; }
+a.image:visited 	{	text-decoration: none; }
+a.image:hover 		{	text-decoration: none; }
+a.image:active 		{	text-decoration: none; }
