- [DEV-405] improvements and fixes in API (Artem)  - [DEV-405] implemented items API filter to items screen, items select through the API (Artem)  - changes in schema.sql, added field search_limit in schema (Artem)  - improved selecting user profiles, cache added (Artem)  - changes in BB theme (Artem)

--- a/frontends/php/styles/css_bb.css
+++ b/frontends/php/styles/css_bb.css
@@ -319,6 +319,14 @@ div.iconreset{
 	background-image: url('../images/general/bttn/reset_bb.png');
 }
 
+div.iconok{
+	background-image: url('../images/general/ok_bb.png');
+}
+
+div.sla_green{
+	background-image: url('../images/gradients/sla_blue15.png');
+}
+
 div#scrolltableft{
 	color: #0CF;
 }
