--- a/trunk/frontends/php/styles/css_bb.css
+++ b/trunk/frontends/php/styles/css_bb.css
@@ -327,6 +327,14 @@ div.sla_green{
 	background-image: url('../images/gradients/sla_blue15.png');
 }
 
+div.icon_sortup{
+	background-image: url('../images/general/sort_up_bb.png');
+}
+
+div.icon_sortdown{
+	background-image: url('../images/general/sort_down_bb.png');
+}
+
 div#scrolltableft{
 	color: #0CF;
 }
