--- a/frontends/php/styles/blocks.css
+++ b/frontends/php/styles/blocks.css
@@ -20,573 +20,259 @@
 */
 
 /************************************************************/
-/*					SCROLLBAR STYLES						*/
+/*					SCROLLBAR III STYLES						*/
 /************************************************************/
-
-div.scrollx{
-	overflow:auto;
-	height:18px;
-}
-
-div.scrolly{
-	overflow:auto;
-	width:20px;
-}
-
-div.sdi{
-	position:absolute;
-	right:	2px;
-	top:	2px;
-	width:	200px;
-	height: 100px;
-	border: red 1px solid;
-	overflow:auto;
-}
-
-img.bar_arrow{
-	display: none;
+div.scrollbar{
 	position: relative;
-	z-index: 10;
+	border: 0px red solid;
+	height: 56px;
+	background-color: #DDDDDD;
+/*	overflow: hidden; */
 }
 
-div#scroll{
-	position: relative;
-/*	display:none; */
-	height:17px;
+div.scrollbar .info{
+	width: 300px;
+	height: 14px;
+	font-size: 10px;
+	vertical-align:bottom;
 }
 
-img#scroll_calendar{
-	position: absolute;
-	top: -12px;
-	left: 0px;
+div.scrollbar .info .gmenu{
+	height: 12px;
+	width: 16px;
+	float: left;
+	margin: 1px;
+	margin-right: 5px;
+	background-image: url(../images/general/calendar/cal.gif);
+	background-repeat:no-repeat;
 }
 
-img#scroll_calendar:hover{
+div.scrollbar .info .zoom{
+	float: left;
+	border: 0px #FF00FF solid;
+	white-space:nowrap;
+	height: 14px;
+	line-height: 14px;
+}
+
+div.scrollbar .info .zoom .text{
+	padding-left: 2px;
+	padding-right: 5px;
+	
+	font-weight: bold;
+	font-size: 11px;
+	color: #333333;
+}
+
+div.scrollbar .info .zoom .links{
+	font-size: 10px;
+	white-space: nowrap;
+}
+
+div.scrollbar .info .zoom .links .link{
+	padding-left: 3px;
+	padding-right: 3px;
+	line-height: 14px;
+	vertical-align: top;
+}
+
+div.scrollbar .info .timeline{
+	float: right;
+	border: 0px #FF00FF solid;
+	white-space:nowrap;
+	
+	height: 14px;
+	font-size: 10px;
+	vertical-align:bottom;
+}
+
+div.scrollbar .info .timeline .info_left{
+	border: 0px black solid;
+	padding-right: 5px;	
+
+	line-height: 12px;
+	vertical-align: bottom;
+	text-decoration: none;
+}
+
+div.scrollbar .info .timeline .info_sep1{
+	border: 0px black solid;
+	padding-right: 5px;
+
+	line-height: 14px;
+	vertical-align: bottom;
+}
+
+div.scrollbar .info .timeline .info_right{
+	border: 0px black solid;
+	padding-right: 2px;
+
+	line-height: 12px;
+	vertical-align: bottom;
+	text-decoration: none;
+}
+
+div.scrollbar .sublevel{
+	width: 500px;
+}
+
+div.scrollbar .sublevel .bg{
+	height: 27px;
+	background-image: url(../images/general/bar2/bg.png);
+	background-repeat:repeat-x;
+}
+
+div.scrollbar .sublevel .left{
+	float: left;
+	width: 17px;
+	height: 27px;
+	background-image: url(../images/general/bar2/left.png);
 	cursor: pointer;
 }
 
-div#scrolltableft{
-	position:absolute;
-	top: -15px;
-	left: 18px;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:10px;
-	font-weight:bold;
-/*	background-color:#FFF; */
+div.scrollbar .sublevel .right{
+	float: right;
+	width: 17px;
+	height: 27px;
+	background-image: url(../images/general/bar2/right.png);
+	cursor: pointer;
 }
 
-div#scrolltabright{
-	position:absolute;
-	top: -15px;
-	right: 0px;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:10px;
-	font-weight:bold;
-/*	background-color:#FFF; */
-}
-
-div#scrolltabright_flag {
-	position:absolute;
-	top: -15px;
-	right: 160px;
-	font-family:Verdana, Arial, Helvetica, sans-serif;
-	font-size:10px;
-	font-weight:bold;
-}
-
-div#scroll_left{
-	background-image: url(../images/general/bar/left.gif);
-	background-repeat:no-repeat;
-	width:17px;
-	height: 17px;
-	float: left;
-}
-
-div#scroll_left:hover{
-	cursor:pointer;
-}
-
-div#scroll_right{
-	background-image: url(../images/general/bar/right.gif);
-	background-repeat:no-repeat;
-	width:17px;
-	height: 17px;
-	float: left;
-}
-
-div#scroll_right:hover{
-	cursor:pointer;
-}
-
-div#scroll_middle{
-	background-image: url(../images/general/bar/bg.gif);
-	height: 17px;
-	float: left;
-}
-
-div#scroll_bar{
-	position: absolute;
-	bottom: 0px;
+div.scrollbar .overlevel{
+	position:relative;
+	top: -27px;
+	border: 0px green solid;
+	height: 27px;
 	left: 17px;
 }
 
-div#scroll_bar:hover{
-	cursor:pointer;
+div.scrollbar .overlevel .bar{
+	position:relative;
+	left: 74px;	
+	width: 140px;
+	height: 25px;
+	
+	border: 1px black solid;
+	
+	z-index: 1;
+	cursor: pointer;
 }
 
+div.scrollbar .overlevel .bar .icon{
+	position: relative;
+	height: 25px;
+	
+	background-image: url(../images/general/bar2/bar_bg.png);
+	background-repeat:repeat-x;
+}
 
-div#arrow_l{
-	position:absolute;
-	bottom: 0px;
-	display:none;
-	background-image:url(../images/general/bar/arrow_l.gif);
+div.scrollbar .overlevel .bar .icon .center{
+	background-image: url(../images/general/bar2/bar_middle.png);
+	background-position:center;
 	background-repeat:no-repeat;
-	width: 12px;
-	height:17px;
+
+	height: 25px;
 }
 
-div#arrow_l:hover{
-	cursor:pointer;
-}
-
-div#arrow_r{
-	position:absolute;
-	bottom: 0px;
-	display:none;
-	background-image:url(../images/general/bar/arrow_r.gif);
-	background-repeat:no-repeat;
-	width: 12px;
-	height:17px;
-}
-
-div#arrow_r:hover{
-	cursor:pointer;
-}
-
-div#bar_left{
-	background-image: url(../images/general/bar/bar_left.gif);
-	background-repeat:no-repeat;
-	width:2px;
-	height: 17px;
-	float: left;
-}
-
-div#bar_bg_l{
-	background-image: url(../images/general/bar/bar_bg.gif);
-	width:26px;
-	height: 17px;
-	float: left;
-}
-
-div#bar_middle{
-	background-image: url(../images/general/bar/bar_middle.gif);
-	background-repeat:no-repeat;
-	width:8px;
-	height: 17px;
-	float: left;
-}
-
-div#bar_bg_r{
-	background-image: url(../images/general/bar/bar_bg.gif);
-	width:26px;
-	height: 17px;
-	float: left;
-}
-
-div#bar_right{
-	background-image: url(../images/general/bar/bar_right.gif);
-	background-repeat:no-repeat;
-	width:2px;
-	height: 17px;
-	float: left;
-}
-
-
-/************************************************************/
-/*						GMENU STYLES						*/
-/************************************************************/
-
-img{
-	border: 0px;
-}
-
-img#gmenu_day_up{
-	position:absolute;
-	text-align:center;
-	top: 10px;
-	left: 28px;
-}
-img#gmenu_day_up:hover{
-	cursor:pointer;
-}
-
-img#gmenu_month_up{
-	position:absolute;
-	text-align:center;
-	top: 10px;
-	left: 100px;
-}
-img#gmenu_month_up:hover{
-	cursor:pointer;
-}
-
-
-img#gmenu_year_up{
-	position:absolute;
-	text-align:center;
-	top: 10px;
-	left: 152px;
-}
-img#gmenu_year_up:hover{
-	cursor:pointer;
-}
-
-
-img#gmenu_day_down{
-	position:absolute;
-	text-align:center;
-	top: 23px;
-	left: 28px;
-}
-
-img#gmenu_day_down:hover{
-	cursor:pointer;
-}
-
-img#gmenu_month_down{
-	position:absolute;
-	text-align:center;
-	top: 23px;
-	left: 100px;
-}
-img#gmenu_month_down:hover{
-	cursor:pointer;
-}
-
-img#gmenu_year_down{
-	position:absolute;
-	text-align:center;
-	top: 23px;
-	left: 152px;
-}
-img#gmenu_year_down:hover{
-	cursor:pointer;
-}
-
-img#gmenu_hour_up{
-	position:absolute;
-	text-align:center;
-	top: 10px;
-	left: 196px;
-}
-img#gmenu_hour_up:hover{
-	cursor:pointer;
-}
-
-img#gmenu_minute_up{
-	position:absolute;
-	text-align:center;
-	top: 10px;
-	left: 230px;
-}
-img#gmenu_minute_up:hover{
-	cursor:pointer;
-}
-
-img#gmenu_hour_down{
-	position:absolute;
-	text-align:center;
-	top: 23px;
-	left: 196px;
-}
-img#gmenu_hour_down:hover{
-	cursor:pointer;
-}
-
-img#gmenu_minute_down{
-	position:absolute;
-	text-align:center;
-	top: 23px;
-	left: 230px;
-}
-img#gmenu_minute_down:hover{
-	cursor:pointer;
-}
-
-img#gmenu_period_v_up{
-	position:absolute;
-	text-align:center;
-	top: 10px;
-	left: 82px;
-}
-img#gmenu_period_v_up:hover{
-	cursor:pointer;
-}
-
-img#gmenu_period_t_up{
-	position:absolute;
-	text-align:center;
-	top: 10px;
-	left: 154px;
-}
-img#gmenu_period_t_up:hover{
-	cursor:pointer;
-}
-
-img#gmenu_period_v_down{
-	position:absolute;
-	text-align:center;
-	top: 23px;
-	left: 82px;
-}
-img#gmenu_period_v_down:hover{
-	cursor:pointer;
-}
-
-img#gmenu_period_t_down{
-	position:absolute;
-	text-align:center;
-	top: 23px;
-	left: 154px;
-}
-img#gmenu_period_t_down:hover{
-	cursor:pointer;
-}
-
-a#gmenu_load:link{
-	position:absolute;
-	border:#666666 1px solid;
-	background-color:#FFFFFF;
-	text-align:center;
-	text-decoration:none;
-	color:#333333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 9px;
-	font-weight:bold;
-	top: 50px;
-	left: 175px;
-	width: 72px;
-}
-
-a#gmenu_load:visited{
-	position:absolute;
-	border:#666666 1px solid;
-	background-color:#FFFFFF;
-	text-align:center;
-	text-decoration:none;
-	color:#333333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	font-weight:bold;
-	top: 50px;
-	left: 175px;
-	width: 72px;
-}
-
-a#gmenu_load:hover{
-	position:absolute;
-	border:#666666 1px solid;
-	background-color:#CFCFCF;
-	text-align:center;
-	text-decoration:none;
-	color:#333333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	font-weight:bold;
-	top: 50px;
-	left: 175px;
-	width: 72px;
-}
-
-a#gmenu_load:active{
-	position:absolute;
-	border:#666666 1px solid;
-	background-color:#FFFFFF;
-	text-align:center;
-	text-decoration:none;
-	color:#333333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	font-weight:bold;
-	top: 50px;
-	left: 175px;
-	width: 72px;
-}
-
-a#gmenu_hide:link{
-	position:absolute;
-	border:#666666 1px solid;
-	background-color:#FFFFFF;
-	text-align:center;
-	text-decoration:none;
-	color:#333333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	font-weight:bold;
-	top: 72px;
-	left: 175px;
-	width: 72px;
-}
-
-a#gmenu_hide:visited{
-	position:absolute;
-	border:#666666 1px solid;
-	background-color:#FFFFFF;
-	text-align:center;
-	text-decoration:none;
-	color:#333333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	font-weight:bold;
-	top: 72px;
-	left: 175px;
-	width: 72px;
-}
-
-a#gmenu_hide:hover{
-	position:absolute;
-	border:#666666 1px solid;
-	background-color:#CFCFCF;
-	text-align:center;
-	text-decoration:none;
-	color:#333333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	font-weight:bold;
-	top: 72px;
-	left: 175px;
-	width: 72px;
-}
-
-a#gmenu_hide:active{
-	position:absolute;
-	border:#666666 1px solid;
-	background-color:#FFFFFF;
-	text-align:center;
-	text-decoration:none;
-	color:#333333;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	font-weight:bold;
-	top: 72px;
-	left: 175px;
-	width: 72px;
-}
-
-div#gmenu{
-	position:absolute;
-	background-color:#EFEFFF;
-	border:#3333FF 1px solid;
-	width: 254px;
-	height: 94px;
-}
-
-
-div#gmenu_bsdate{
+div.scrollbar .overlevel .ghost{
 	position: absolute;
-	border:1px #888888 dashed;
-	top: 3px;
-	left: 4px;
-	height: 38px;
-	width: 244px;
+	top: 0px;
+	left: 74px;
+
+	height: 25px;
+	width: 140px;
+	
+	line-height: 25px;
+	
+	border: 1px black solid;
 }
 
-div#gmenu_period{
+div.scrollbar .overlevel .left_arr{
 	position: absolute;
-	border:1px #888888 dashed;
-	top: 50px;
-	left: 4px;
-	height: 38px;
-	width: 166px;
+	top: 8px;
+	left: 70px;
+	width: 9px;
+	height: 13px;
+
+	background-image: url(../images/general/bar2/left_arr.png);
+	
+	z-index: 1000;
+	cursor:e-resize;
 }
 
-span#gmenu_day{
-	position:absolute;
-	text-align:center;;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	border:#666666 1px solid;
-	top: 10px;
-	left: 6px;
-	width: 20px;
+div.scrollbar .overlevel .right_arr{
+	position: absolute;
+	top: 8px;
+	left: 211px;
+	width: 9px;
+	height: 13px;
+
+	background-image: url(../images/general/bar2/right_arr.png);
+	
+	z-index: 1000;
+	cursor:e-resize;
 }
 
-span#gmenu_month{
-	position:absolute;
-	text-align:center;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	border:#666666 1px solid;
-	top: 10px;
-	left: 38px;
+
+div.scrollbar .subline{
+	position: relative;
+	top: -26px;
+	width: 500px;
+	height: 14px;
+	border: 0px blue solid;
+}
+
+div.scrollbar .subline .nav_links{
+	float: left;
+	border: 0px black solid;
+	padding-left: 2px;
+	padding-right: 5px;
+	line-height: 12px;
+}
+
+div.scrollbar .subline .nav_links .link{
+	padding-left: 3px;
+	padding-right: 3px;
+	line-height: 10px;
+	vertical-align: top;
+}
+
+div.scrollbar .subline .nav_links .text{
+	line-height: 12px;
+	vertical-align: top;
+	color: #333333;
+}
+
+div.scrollbar .subline .period{
+	float: right;
 	width: 60px;
+	text-align: right;
 }
 
-span#gmenu_year{
-	position:absolute;
-	text-align:center;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	border:#666666 1px solid;
-	top: 10px;
-	left: 110px;
-	width: 40px;
+div.scrollbar .subline .period .period_state_begin{
+	padding-left: 2px;
+	line-height: 12px;
+	color: #888888;
 }
 
-span#gmenu_hour{
-	position:absolute;
-	text-align:center;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	border:#666666 1px solid;
-	top: 10px;
-	left: 174px;
-	width: 20px;
+div.scrollbar .subline .period .period_state_end{
+	padding-right: 2px;
+	line-height: 12px;
+	color: #888888;
 }
 
-span#gmenu_minute{
-	position:absolute;
-	text-align:center;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	border:#666666 1px solid;
-	top: 10px;
-	left: 208px;
-	width: 20px;
+div.scrollbar .subline .period .period_state{
+	line-height: 12px;
+	color: #888888;
 }
 
-span#gmenu_period_desc{
-	position:absolute;
-	text-align:left;
-	font-weight:bold;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 13px;
-	color:#3F3F3F;
-	top: 10px;
-	left: 6px;
-	width: 48px;
-}
-
-span#gmenu_period_value{
-	position:absolute;
-	text-align:center;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	border:#666666 1px solid;
-	top: 10px;
-	left: 52px;
-	width: 28px;
-}
-
-span#gmenu_period_type{
-	position:absolute;
-	text-align:center;
-	font-family:Arial, Helvetica, sans-serif;
-	font-size: 11px;
-	border:#666666 1px solid;
-	top: 10px;
-	left: 100px;
-	width: 52px;
+div.scrollbar .subline .info_period{
+	float: right;
+	padding-left: 2px;
+	padding-right: 2px;
+	line-height: 14px;
+	vertical-align: bottom;
+	color: #333333;
 }
 
 /************************************************************/
@@ -610,8 +296,9 @@ div#selection_box{
 div.box_on{
 	position: absolute;
 	z-index:2;
-/*	border: 1px red solid;
+	border: 0px red solid;
 /*	background-color:#FF0000;
+	opacity:.40;
 /**/
 }
 
