- [ZBX-310] added scrollbar to screens (Artem)  - fixed bug in updating profiles (Artem)

--- a/frontends/php/styles/table.css
+++ b/frontends/php/styles/table.css
@@ -476,11 +476,11 @@ table.tableinfo tr td.message {
 
 table.tableinfo tr.selected 			{	background-color: #FFFFBB; border: 1px #DDDDDD solid; }
 
-table.tableinfo tr.odd_row 				{	background-color: #DDDDDD; border: 1px #DDDDDD solid; }
-table.tableinfo tr.odd_row:hover 		{	background-color: #DDDDEE; border: 1px #DDDDEE solid; }
+table.tableinfo tr.odd_row 	td			{	background-color: #DDDDDD; border: 1px #DDDDDD solid; }
+table.tableinfo tr.odd_row:hover td		{	background-color: #DDDDEE; border: 1px #DDDDEE solid; }
 
-table.tableinfo tr.even_row 			{	background-color: #EEEEEE; border: 1px #EEEEEE solid; }
-table.tableinfo tr.even_row:hover 		{	background-color: #EEEEFE; border: 1px #EEEEFE solid; }
+table.tableinfo tr.even_row td		 	{	background-color: #EEEEEE; border: 1px #EEEEEE solid; }
+table.tableinfo tr.even_row:hover td		{	background-color: #EEEEFE; border: 1px #EEEEFE solid; }
 
 table.tableinfo tr td.center				{	vertical-align: middle; text-align: center; }
 
