- changed error/ok icons (Aly)  - changes in trigger api class (Aly)

--- a/frontends/php/styles/css_bb.css
+++ b/frontends/php/styles/css_bb.css
@@ -345,7 +345,7 @@ div.iconreset{
 }
 
 div.iconok{
-	background-image: url('../images/general/ok_bb.png');
+	background-image: url('../images/general/ok_icon_bb.png');
 }
 
 div.sla_green{
